[package]
name = "code-challenge"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "any", "postgres"] }
reqwest = { version = "0.12", features = ["json"] }
dotenvy = "0.15.7"
serde = "1.0.219"
